--- a/usr/share/applications/x-live-hardwareinfo.desktop
+++ b/usr/share/applications/x-live-hardwareinfo.desktop
@@ -3,7 +3,7 @@ Version=0.0.1
 Type=Application
 Name=HardwareInfo 
 Exec=x-live-hardwareinfo
-Icon=hardware
+Icon=x-live-hardwareinfo
 Categories=Utility;
 Keywords=system;hardware;info;
 StartupNotify=true
